fix align

--- a/style.css
+++ b/style.css
@@ -288,6 +288,11 @@ hr {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+.left-text {
+  text-align: left !important;
+  padding-left: 5px;
+}
+
 @media (max-width: 768px) {
   @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@100..900&family=Noto+Serif+Bengali:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Tiro+Bangla:ital@0;1&display=swap");
 
@@ -338,14 +343,13 @@ hr {
   }
   .table-row div {
     display: table-cell;
-    border: .5px dotted #000;
+    border: 0.5px dotted #000;
     padding: 1px;
     text-align: center;
   }
   .table-row {
     display: table-row;
-    border: .5px dotted #000;
+    border: 0.5px dotted #000;
     font-size: 10px;
   }
-
 }
